force-app/main/default/objects/Stripe_Charge__c/Stripe_Charge__c.object-meta.xml
<CustomObject>
    <label>Stripe Charge</label>
    <nameField>
        <label>Stripe Charge ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>