force-app/main/default/objects/Stripe_Charge__c/fields/amount_captured__c.field-meta.xml
<CustomField>
    <fullName>amount_captured__c</fullName>
    <label>amount_captured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>