force-app/main/default/objects/Stripe_Charge__c/fields/approver_email__c.field-meta.xml
<CustomField>
    <fullName>approver_email__c</fullName>
    <label>approver_email</label>
    <type>Email</type>
</CustomField>