force-app/main/default/objects/Stripe_Charge__c/fields/approver_name__c.field-meta.xml
<CustomField>
    <fullName>approver_name__c</fullName>
    <label>approver_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>