force-app/main/default/objects/Stripe_Charge__c/fields/approver_phone__c.field-meta.xml
<CustomField>
    <fullName>approver_phone__c</fullName>
    <label>approver_phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>