force-app/main/default/objects/Stripe_Charge__c/fields/billing_address_city__c.field-meta.xml
<CustomField>
    <fullName>billing_address_city__c</fullName>
    <label>billing_address_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>