force-app/main/default/objects/Stripe_Charge__c/fields/billing_address_country__c.field-meta.xml
<CustomField>
    <fullName>billing_address_country__c</fullName>
    <label>billing_address_country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>