force-app/main/default/objects/Stripe_Charge__c/fields/billing_address_postal_code__c.field-meta.xml
<CustomField>
    <fullName>billing_address_postal_code__c</fullName>
    <label>billing_address_postal_code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>