force-app/main/default/objects/Stripe_Charge__c/fields/billing_address_state__c.field-meta.xml
<CustomField>
    <fullName>billing_address_state__c</fullName>
    <label>billing_address_state</label>
    <length>32</length>
    <type>Text</type>
</CustomField>