force-app/main/default/objects/Stripe_Charge__c/fields/billing_email__c.field-meta.xml
<CustomField>
    <fullName>billing_email__c</fullName>
    <label>billing_email</label>
    <type>Email</type>
</CustomField>