force-app/main/default/objects/Stripe_Charge__c/fields/billing_name__c.field-meta.xml
<CustomField>
    <fullName>billing_name__c</fullName>
    <label>billing_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>