force-app/main/default/objects/Stripe_Charge__c/fields/billing_phone__c.field-meta.xml
<CustomField>
    <fullName>billing_phone__c</fullName>
    <label>billing_phone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>