force-app/main/default/objects/Stripe_Charge__c/fields/charge_datetime__c.field-meta.xml
<CustomField>
    <fullName>charge_datetime__c</fullName>
    <label>charge_datetime</label>
    <type>DateTime</type>
</CustomField>