force-app/main/default/objects/Stripe_Charge__c/fields/charge_id__c.field-meta.xml
<CustomField>
    <fullName>charge_id__c</fullName>
    <label>charge_id</label>
    <length>27</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>