force-app/main/default/objects/Stripe_Charge__c/fields/charge_ts__c.field-meta.xml
<CustomField>
    <fullName>charge_ts__c</fullName>
    <label>charge_ts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>