force-app/main/default/objects/Stripe_Charge__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <label>customer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>