force-app/main/default/objects/Stripe_Charge__c/fields/customer_email__c.field-meta.xml
<CustomField>
    <fullName>customer_email__c</fullName>
    <label>customer_email</label>
    <type>Email</type>
</CustomField>