force-app/main/default/objects/Stripe_Charge__c/fields/dispute__c.field-meta.xml
<CustomField>
    <fullName>dispute__c</fullName>
    <label>dispute</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>