force-app/main/default/objects/Stripe_Charge__c/fields/disputed__c.field-meta.xml
<CustomField>
    <fullName>disputed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disputed</label>
    <type>Checkbox</type>
</CustomField>