force-app/main/default/objects/Stripe_Charge__c/fields/event_ts__c.field-meta.xml
<CustomField>
    <fullName>event_ts__c</fullName>
    <label>event_ts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>