force-app/main/default/objects/Stripe_Charge__c/fields/event_type__c.field-meta.xml
<CustomField>
    <fullName>event_type__c</fullName>
    <label>event_type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>