force-app/main/default/objects/Stripe_Charge__c/fields/failure_code__c.field-meta.xml
<CustomField>
    <fullName>failure_code__c</fullName>
    <label>failure_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>