force-app/main/default/objects/Stripe_Charge__c/fields/failure_message__c.field-meta.xml
<CustomField>
    <fullName>failure_message__c</fullName>
    <label>failure_message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>