force-app/main/default/objects/Stripe_Charge__c/fields/gbVersion__c.field-meta.xml
<CustomField>
    <fullName>gbVersion__c</fullName>
    <label>gbVersion</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>