force-app/main/default/objects/Stripe_Charge__c/fields/invoice_id__c.field-meta.xml
<CustomField>
    <fullName>invoice_id__c</fullName>
    <label>invoice_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>