force-app/main/default/objects/Stripe_Charge__c/fields/invoice_sf_id__c.field-meta.xml
<CustomField>
    <fullName>invoice_sf_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>invoice_sf_id</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Stripe Charges</relationshipLabel>
    <relationshipName>Stripe_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>