force-app/main/default/objects/Stripe_Charge__c/fields/order_id__c.field-meta.xml
<CustomField>
    <fullName>order_id__c</fullName>
    <label>order_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>