force-app/main/default/objects/Stripe_Charge__c/fields/osg_online_id__c.field-meta.xml
<CustomField>
    <fullName>osg_online_id__c</fullName>
    <label>osg_online_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>