force-app/main/default/objects/Stripe_Charge__c/fields/Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card__c</fullName>
    <formula>if (isblank(payment_card_brand__c), &apos;&apos;, 


INITCAP(payment_card_brand__c) + &apos; **** &apos; +  text(payment_card_last4__c) + &apos; (Exp &apos; + text( payment_card_exp_month__c ) + &apos;/&apos; +  text(payment_card_exp_year__c) + &apos;)&apos;


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Card</label>
    <type>Text</type>
</CustomField>