force-app/main/default/objects/Stripe_Charge__c/fields/payment_card_brand__c.field-meta.xml
<CustomField>
    <fullName>payment_card_brand__c</fullName>
    <label>payment_card_brand</label>
    <length>16</length>
    <type>Text</type>
</CustomField>