force-app/main/default/objects/Stripe_Charge__c/fields/payment_card_exp_month__c.field-meta.xml
<CustomField>
    <fullName>payment_card_exp_month__c</fullName>
    <label>payment_card_exp_month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>