force-app/main/default/objects/Stripe_Charge__c/fields/payment_card_last4__c.field-meta.xml
<CustomField>
    <fullName>payment_card_last4__c</fullName>
    <label>payment_card_last4</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>