force-app/main/default/objects/Stripe_Charge__c/fields/processed__c.field-meta.xml
<CustomField>
    <fullName>processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>processed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>