force-app/main/default/objects/Stripe_Charge__c/fields/product_sku__c.field-meta.xml
<CustomField>
    <fullName>product_sku__c</fullName>
    <label>product_sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>