force-app/main/default/objects/Stripe_Charge__c/fields/qty_greenbook__c.field-meta.xml
<CustomField>
    <fullName>qty_greenbook__c</fullName>
    <label>qty_greenbook</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>