force-app/main/default/objects/Stripe_Charge__c/fields/qty_holder__c.field-meta.xml
<CustomField>
    <fullName>qty_holder__c</fullName>
    <label>qty_holder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>