force-app/main/default/objects/Stripe_Charge__c/fields/quote_id__c.field-meta.xml
<CustomField>
    <fullName>quote_id__c</fullName>
    <label>quote_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>