force-app/main/default/objects/Stripe_Charge__c/fields/quote_sf_id__c.field-meta.xml
<CustomField>
    <fullName>quote_sf_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>quote_sf_id</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Stripe Charges</relationshipLabel>
    <relationshipName>Stripe_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>