force-app/main/default/objects/Stripe_Charge__c/fields/receipt_number__c.field-meta.xml
<CustomField>
    <fullName>receipt_number__c</fullName>
    <label>receipt_number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>