force-app/main/default/objects/Stripe_Charge__c/fields/refunded__c.field-meta.xml
<CustomField>
    <fullName>refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>refunded</label>
    <type>Checkbox</type>
</CustomField>