force-app/main/default/objects/Stripe_Charge__c/fields/refunds__c.field-meta.xml
<CustomField>
    <fullName>refunds__c</fullName>
    <label>refunds</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>