force-app/main/default/objects/Stripe_Charge__c/fields/salesforce_client_id__c.field-meta.xml
<CustomField>
    <fullName>salesforce_client_id__c</fullName>
    <label>salesforce_client_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>