force-app/main/default/objects/Stripe_Charge__c/fields/salesforce_order_id__c.field-meta.xml
<CustomField>
    <fullName>salesforce_order_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>salesforce_order_id</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Stripe Charges</relationshipLabel>
    <relationshipName>Stripe_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>