force-app/main/default/objects/Stripe_Charge__c/fields/salesforce_order_number__c.field-meta.xml
<CustomField>
    <fullName>salesforce_order_number__c</fullName>
    <label>salesforce_order_number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>