force-app/main/default/objects/Stripe_Charge__c/fields/shipping_address_line_1__c.field-meta.xml
<CustomField>
    <fullName>shipping_address_line_1__c</fullName>
    <label>shipping_address_line_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>