force-app/main/default/objects/Stripe_Charge__c/fields/shipping_city__c.field-meta.xml
<CustomField>
    <fullName>shipping_city__c</fullName>
    <label>shipping_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>