force-app/main/default/objects/Stripe_Charge__c/fields/shipping_cost__c.field-meta.xml
<CustomField>
    <fullName>shipping_cost__c</fullName>
    <label>shipping_cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>