force-app/main/default/objects/Stripe_Charge__c/fields/shipping_country__c.field-meta.xml
<CustomField>
    <fullName>shipping_country__c</fullName>
    <label>shipping_country</label>
    <length>32</length>
    <type>Text</type>
</CustomField>