force-app/main/default/objects/Stripe_Charge__c/fields/shipping_name__c.field-meta.xml
<CustomField>
    <fullName>shipping_name__c</fullName>
    <label>shipping_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>