force-app/main/default/objects/Stripe_Charge__c/fields/shipping_postal_code__c.field-meta.xml
<CustomField>
    <fullName>shipping_postal_code__c</fullName>
    <label>shipping_postal_code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>