force-app/main/default/objects/Stripe_Charge__c/fields/shipping_state__c.field-meta.xml
<CustomField>
    <fullName>shipping_state__c</fullName>
    <label>shipping_state</label>
    <length>32</length>
    <type>Text</type>
</CustomField>