force-app/main/default/objects/Stripe_Charge__c/fields/simpay_form_id__c.field-meta.xml
<CustomField>
    <fullName>simpay_form_id__c</fullName>
    <label>simpay_form_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>