force-app/main/default/objects/Stripe_Charge__c/fields/simpay_tax_amount__c.field-meta.xml
<CustomField>
    <fullName>simpay_tax_amount__c</fullName>
    <label>simpay_tax_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>