force-app/main/default/objects/Stripe_Charge__c/fields/spree_order_id__c.field-meta.xml
<CustomField>
    <fullName>spree_order_id__c</fullName>
    <label>spree_order_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>