force-app/main/default/objects/Stripe_Charge__c/fields/utm_mobile__c.field-meta.xml
<CustomField>
    <fullName>utm_mobile__c</fullName>
    <label>utm_mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>