force-app/main/default/objects/Stripe_Charge__c/fields/utm_referral__c.field-meta.xml
<CustomField>
    <fullName>utm_referral__c</fullName>
    <label>utm_referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>