force-app/main/default/objects/Stripe_Charge__c/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>