force-app/main/default/objects/Stripe_Charge__c/validationRules/Name_ID_and_Charge_ID_Must_be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_ID_and_Charge_ID_Must_be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>charge_id__c != Name</errorConditionFormula>
    <errorMessage>Stripe Charge ID and Charge ID Must be the same value</errorMessage>
</ValidationRule>